Fix dropdown overflow in filters container

--- a/src/pages/admin/Users/Filters/styles.scss
+++ b/src/pages/admin/Users/Filters/styles.scss
@@ -12,6 +12,7 @@
 
   &--open {
     max-height: 24rem;
+    overflow: visible;
     opacity: 1;
   }
 
